--- a/clone/templates/home.html
+++ b/clone/templates/home.html
@@ -1,7 +1,9 @@
-
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
 {{ block.super }}
-<h1>Template working</h1>
+<div class="container">
+  <h1 class="text-center">Template working</h1>
+</div>
+
 {% endblock %}
