--- a/clone/templates/base.html
+++ b/clone/templates/base.html
@@ -6,9 +6,9 @@
   <meta charset="utf-8">
 
   {% if title %}
-  <title>Picturate {{title}}</title>
+  <title>Instagram {{title}}</title>
   {% else %}
-    <title> Picturate </title>
+    <title> Instagram </title>
   {% endif %}
 
   {% block styles %}
@@ -26,6 +26,7 @@
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://kit.fontawesome.com/395679d487.js" crossorigin="anonymous"></script>
      {% bootstrap_javascript %}
       <script src=" {% static 'js/base.js' %}"></script>
     {% endblock %}
