add login link to html

--- a/clone/templates/navbar.html
+++ b/clone/templates/navbar.html
@@ -52,14 +52,14 @@
             </li>
             <li class="list-inline-item ml-2 align-middle">
               <a href="#" class="link-menu">
-                <a href="#" class="link-menu">
+                <a href="/logout" class="link-menu">
                 <i class="bi bi-box-arrow-right">Logout</i>
               </a>
             </li>
             {% else %}
             <li class="list-inline-item ml-2 align-middle">
               <a href="#" class="link-menu">
-                <a href="#" class="link-menu">
+                <a href="/accounts/login" class="link-menu">
                 <i class="bi bi-box-arrow-right">Login</i>
               </a>
             </li>
