--- a/clone/templates/navbar.html
+++ b/clone/templates/navbar.html
@@ -1,77 +1,48 @@
 {% load static %}
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container justify-content-center">
-      <div class="d-flex flex-row justify-content-between align-items-center col-9">
-        <a class="navbar-brand" href="/">
-          <img src="{% static 'img/instagram_logo.png' %}" alt="instagram-logo" width="103">
-        </a>
-        <div>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          </form>
-        </div>
-        <div class="d-flex flex-row">
-          {% if user.is_authenticated %}
-          <ul class="list-inline m-0">
-            <li class="list-inline-item">
-              <a href="#" class="link-menu">
-                <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-house-door-fill text-black"
-                 xmlns="http://www.w3.org/2000/svg"> <path d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z" />
-                <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
-                </svg>
-              </a>
-            </li>
-            <li class="list-inline-item ml-2">
-              <a href="/upload/image" class="link-menu">
-                <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-inboxes text-black" xmlns="http://www.w3.org/2000/svg">
-                  upload
-                  <path fill-rule="evenodd" d="M.125 11.17A.5.5 0 0 1 .5 11H6a.5.5 0 0 1 .5.5 1.5 1.5 0 0 0 3 0 .5.5 0 0 1 .5-.5h5.5a.5.5 0 0 1 .496.562l-.39 3.124A1.5 1.5 0 0 1 14.117 16H1.883a1.5 1.5 0 0 1-1.489-1.314l-.39-3.124a.5.5 0 0 1 .121-.393zm.941.83l.32 2.562a.5.5 0 0 0 .497.438h12.234a.5.5 0 0 0 .496-.438l.32-2.562H10.45a2.5 2.5 0 0 1-4.9 0H1.066zM3.81.563A1.5 1.5 0 0 1 4.98 0h6.04a1.5 1.5 0 0 1 1.17.563l3.7 4.625a.5.5 0 0 1-.78.624l-3.7-4.624A.5.5 0 0 0 11.02 1H4.98a.5.5 0 0 0-.39.188L.89 5.812a.5.5 0 1 1-.78-.624L3.81.563z" />
-                  <path fill-rule="evenodd" d="M.125 5.17A.5.5 0 0 1 .5 5H6a.5.5 0 0 1 .5.5 1.5 1.5 0 0 0 3 0A.5.5 0 0 1 10 5h5.5a.5.5 0 0 1 .496.562l-.39 3.124A1.5 1.5 0 0 1 14.117 10H1.883A1.5 1.5 0 0 1 .394 8.686l-.39-3.124a.5.5 0 0 1 .121-.393zm.941.83l.32 2.562A.5.5 0 0 0 1.884 9h12.234a.5.5 0 0 0 .496-.438L14.933 6H10.45a2.5 2.5 0 0 1-4.9 0H1.066z" />
-                </svg>
-              </a>
-            </li>
-            <li class="list-inline-item ml-2">
-              <a href="#" class="link-menu">
-                <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-compass text-black" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" d="M8 15.016a6.5 6.5 0 1 0 0-13 6.5 6.5 0 0 0 0 13zm0 1a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z" />
-                  <path d="M6 1a1 1 0 0 1 1-1h2a1 1 0 0 1 0 2H7a1 1 0 0 1-1-1zm.94 6.44l4.95-2.83-2.83 4.95-4.95 2.83 2.83-4.95z" />
-                </svg>
-              </a>
-            </li>
-            <li class="list-inline-item ml-2">
-              <a href="#" class="link-menu">
-                <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-heart" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
-                </svg>
-              </a>
-            </li>
-            <li class="list-inline-item ml-2 align-middle">
-              <a href="#" class="link-menu">
-                <i class="bi bi-person-circle"></i>
-              </a>
-            </li>
-            <li class="list-inline-item ml-2 align-middle">
-              <a href="#" class="link-menu">
-                <a href="/logout" class="link-menu">
-                <i class="bi bi-box-arrow-right">Logout</i>
-              </a>
-            </li>
-            {% else %}
-            <li class="list-inline-item ml-2 align-middle">
-              <a href="#" class="link-menu">
-                <a href="/accounts/login" class="link-menu">
-                <i class="bi bi-box-arrow-right">Login</i>
-              </a>
-            </li>
-          </ul>
-          {% endif %}
-        </div>
+<div class="navigation">
+  <div class="logo">
+    <a href="{% url 'home' %}"><img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
+        alt="logo" width="103"></a>
+  </div>
+  <form role="search" class="form-inline" action="">
+    <div class="input-group">
+      <input type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1" name="user">
+      <div class="input-group-append" type="submit">
+        <button class="input-group-text btn" type="submit"><i class="fas fa-search"></i></button>
       </div>
     </div>
-  </nav>
+  </form>
+  <div class="nav-icons">
+    <a href="/"><i class="fas fa-home"></i></a>
+    <a href="/upload/image"><i class="fas fa-share-alt"></i></i></a>
+    <a href="#" data-toggle="modal" data-target="#myModal">
+      <i class="fas fa-user"></i>
+    </a>
+  </div>
 
+</div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm" role="document" style="position: fixed;top: 8%;right: 13%;">
+    <div class="modal-content" style="width: 180%;">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body text-left">
+        <ul>
+          <li><a href="/profile/{{request.user.id}}">Profile</a></li>
+          <li><a href="/upload/image">Upload Image</a></li>
+          <li><a href="/logout">Logout</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
 
-
+  
 
 <!-- scroll down test--->
