--- a/clone/templates/navbar.html
+++ b/clone/templates/navbar.html
@@ -1,18 +1,14 @@
 {% load static %}
-<div class="navigation">
+<!-- <div class="navigation">
   <div class="logo">
     <a href="{% url 'home' %}"><img
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
         alt="logo" width="103"></a>
   </div>
-  <form role="search" class="form-inline" action="">
-    <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1" name="user">
-      <div class="input-group-append" type="submit">
-        <button class="input-group-text btn" type="submit"><i class="fas fa-search"></i></button>
-      </div>
-    </div>
-  </form>
+  <form class="mb-0 h1 ml-auto mr-auto" id="searchform" action="" >
+             <input name="search_user" autocomplete="off" id="searching" class="form-control d-none d-md-block" placeholder="Search">
+            <i class="spinner "></i>
+        </form>
   <div class="nav-icons">
     <a href="/"><i class="fas fa-home"></i></a>
     <a href="/upload/image"><i class="fas fa-share-alt"></i></i></a>
@@ -22,9 +18,9 @@
   </div>
 
 </div>
-</div>
+</div> -->
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm" role="document" style="position: fixed;top: 8%;right: 13%;">
     <div class="modal-content" style="width: 180%;">
       <div class="modal-header">
@@ -41,8 +37,51 @@
       </div>
     </div>
   </div>
-</div>
-
-  
-
-<!-- scroll down test--->
+</div> -->
+<div class="navigation">
+  <div class="navbar fixed-top bg-white">
+    <nav class="container">
+      <span class="navbar-brand mb-0 h1">
+        <a href="{% url 'home' %}"><img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
+            alt="logo" width="103"></a>
+      </span>
+      <form class="mb-0 h1 ml-auto mr-auto" id="searchform" action="">
+        <input name="search_user" autocomplete="off" id="searching" class="form-control d-none d-md-block"
+          placeholder="Search">
+        <i class="spinner "></i>
+      </form>
+      <span class="pull-right">
+        <div class="nav-icons">
+          <a href="/"><i class="fas fa-home"></i></a>
+          <a href="/upload/image"><i class="fas fa-share-alt"></i></i></a>
+          <a href="#" data-toggle="modal" data-target="#myModal">
+            <i class="fas fa-user"></i>
+          </a>
+        </div>
+      </span>
+    </nav>
+  </div>
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-sm" role="document" style="position: fixed;top: 8%;right: 13%;">
+      <div class="modal-content" style="width: 180%;">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body text-left">
+          <ul>
+            <li><a href="/profile/{{request.user.id}}">Profile</a></li>
+            <li><a href="/upload/image">Upload Image</a></li>
+            <li><a href="/logout">Logout</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <!-- scroll down test--->
