--- a/clone/templates/create_profile.html
+++ b/clone/templates/create_profile.html
@@ -9,7 +9,7 @@
             <form  action="{%url 'create_profile'%}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="logo">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png" alt="">
                 </div>
                 <h2 class="intro">Create a profile to start using Instagram</h2>
                 {% bootstrap_form form%}
@@ -18,4 +18,21 @@
         </div>
     </div>
 </div>
+<footer class="mastfoot mt-auto">
+    <div class="inner">
+        <ul class="footer-flex">
+            <li class="text-muted">About</li>
+            <li class="text-muted">Blog</li>
+            <li class="text-muted">Jobs</li>
+            <li class="text-muted">Help</li>
+            <li class="text-muted">API</li>
+            <li class="text-muted">Privacy</li>
+            <li class="text-muted">Terms</li>
+            <li class="text-muted">TopAccounts</li>
+            <li class="text-muted">Hashtags</li>
+            <li class="text-muted">Locations</li>
+        </ul>
+        <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
+    </div>
+</footer>
 {% endblock %}
