--- a/clone/templates/django_registration/registration_form.html
+++ b/clone/templates/django_registration/registration_form.html
@@ -35,5 +35,21 @@
     <div class="col-md-4"></div>
   </div>
 </div>
-
+<footer class="mastfoot mt-auto">
+  <div class="inner">
+    <ul class="footer-flex">
+      <li class="text-muted">About</li>
+      <li class="text-muted">Blog</li>
+      <li class="text-muted">Jobs</li>
+      <li class="text-muted">Help</li>
+      <li class="text-muted">API</li>
+      <li class="text-muted">Privacy</li>
+      <li class="text-muted">Terms</li>
+      <li class="text-muted">TopAccounts</li>
+      <li class="text-muted">Hashtags</li>
+      <li class="text-muted">Locations</li>
+    </ul>
+    <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
+  </div>
+</footer>
 {% endblock %}
