--- a/clone/templates/navbar.html
+++ b/clone/templates/navbar.html
@@ -53,10 +53,10 @@
       </form>
       <span class="pull-right">
         <div class="nav-icons">
-          <a href="/"><i class="fas fa-home"></i></a>
-          <a href="/upload/image"><i class="fas fa-share-alt"></i></i></a>
+          <a href="/"><i class="fas fa-home navbar-icons"></i></a>
+          <a href="/upload/image"><i class="fas fa-share-alt  navbar-icons"></i></i></a>
           <a href="#" data-toggle="modal" data-target="#myModal">
-            <i class="fas fa-user"></i>
+            <i class="fas fa-user  navbar-icons"></i>
           </a>
         </div>
       </span>
