--- a/clone/templates/home.html
+++ b/clone/templates/home.html
@@ -63,5 +63,25 @@
             <a href="/profile/{{prof.id}}" class="profile_tag">{{prof.user.username}}</a>
           </div>
         </li> {% endif %} {% endfor %} </ul>
-    </div> {% endblock %}
-    <!-- END SIDEBAR  -->
+    </div> 
+<!-- END SIDEBAR  -->
+<!-- FOOTER  -->
+<footer class="mastfoot mt-auto">
+  <div class="inner">
+    <ul class="footer-flex">
+      <li class="text-muted">About</li>
+      <li class="text-muted">Blog</li>
+      <li class="text-muted">Jobs</li>
+      <li class="text-muted">Help</li>
+      <li class="text-muted">API</li>
+      <li class="text-muted">Privacy</li>
+      <li class="text-muted">Terms</li>
+      <li class="text-muted">TopAccounts</li>
+      <li class="text-muted">Hashtags</li>
+      <li class="text-muted">Locations</li>
+    </ul>
+    <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
+  </div>
+</footer>
+    {% endblock %}
+   
