--- a/clone/templates/registration/login.html
+++ b/clone/templates/registration/login.html
@@ -1,4 +1,5 @@
-{%extends "registration/base.html"%} {% load bootstrap4 %} {% block content %} <div class="container">
+{%extends "registration/base.html"%} {% load bootstrap4 %} {% block content %} 
+<div class="container">
   <div class="row">
     <!-- Empty div -->
     <div class="col-md-4"></div>
@@ -21,4 +22,22 @@
     <div class="col-md-4"></div>
   </div>
 </div> 
+<!-- FOOTER  -->
+<footer class="mastfoot mt-auto">
+  <div class="inner">
+    <ul class="footer-flex">
+      <li class="text-muted">About</li>
+      <li class="text-muted">Blog</li>
+      <li class="text-muted">Jobs</li>
+      <li class="text-muted">Help</li>
+      <li class="text-muted">API</li>
+      <li class="text-muted">Privacy</li>
+      <li class="text-muted">Terms</li>
+      <li class="text-muted">TopAccounts</li>
+      <li class="text-muted">Hashtags</li>
+      <li class="text-muted">Locations</li>
+    </ul>
+    <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
+  </div>
+</footer>
 {% endblock %}
