--- a/clone/templates/upload_image.html
+++ b/clone/templates/upload_image.html
@@ -20,4 +20,21 @@
             </div>
         </div>
     </div>
+<footer class="mastfoot mt-auto">
+    <div class="inner">
+        <ul class="footer-flex">
+            <li class="text-muted">About</li>
+            <li class="text-muted">Blog</li>
+            <li class="text-muted">Jobs</li>
+            <li class="text-muted">Help</li>
+            <li class="text-muted">API</li>
+            <li class="text-muted">Privacy</li>
+            <li class="text-muted">Terms</li>
+            <li class="text-muted">TopAccounts</li>
+            <li class="text-muted">Hashtags</li>
+            <li class="text-muted">Locations</li>
+        </ul>
+        <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
+    </div>
+</footer>
 {% endblock %}
