--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,6 +9,13 @@
   margin-bottom: 29px;
 }
 
+.navbar-icons {
+  font-size: 30px;
+  color: black;
+  margin-right: 1em;
+  font-weight: 100;
+}
+
 /* END NAVBAR  */
 /* IMAGE DISPLAY HOMEPAGE  */
 .picture {
