--- a/clone/templates/profile/profile.html
+++ b/clone/templates/profile/profile.html
@@ -149,4 +149,5 @@
     </ul>
     <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
   </div>
-</footer> {% endblock %}
+</footer> 
+{% endblock %}
