--- a/clone/templates/create_profile.html
+++ b/clone/templates/create_profile.html
@@ -1,24 +1,24 @@
-{%extends "registration/base.html"%}
-{% load bootstrap4 %}
-{% load static %}
-
-{% block content %}
-<div id="wrapper" id="content">
-    <div class="register">
-        <div class="form-data form-data-prof">
-            <form  action="{%url 'create_profile'%}" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div class="logo">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png" alt="">
-                </div>
-                <h2 class="intro">Create a profile to start using Instagram</h2>
-                {% bootstrap_form form%}
-                <button class="form-btn" type="submit">Create Profile</button>
-            </form>
+{%extends "registration/base.html"%} {% load bootstrap4 %} {% load static %} {% block content %}
+<!-- CREATE PROFILE  -->
+<div class="container">
+    <div id="wrapper" id="content">
+        <div class="register">
+            <div class="form-data form-data-prof">
+                <form action="{%url 'create_profile'%}" method="post" enctype="multipart/form-data"> {% csrf_token %}
+                    <div class="logo text-center mb-5">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
+                            alt="" style="width: 300px; height:auto;" class="">
+                    </div>
+                    <h2 class="intro">Create a profile to start using Instagram</h2> {% bootstrap_form form%} <button
+                        class="form-btn" type="submit">Create Profile</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
-<footer class="mastfoot mt-auto">
+<!-- END CREATE PROFILE  -->
+<!-- FOOTER  -->
+<footer class="mastfoot  mt-5">
     <div class="inner">
         <ul class="footer-flex">
             <li class="text-muted">About</li>
@@ -34,5 +34,4 @@
         </ul>
         <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
     </div>
-</footer>
-{% endblock %}
+</footer> {% endblock %}
