--- a/clone/templates/upload_image.html
+++ b/clone/templates/upload_image.html
@@ -1,40 +1,32 @@
-{%extends 'base.html'%}
-{% load static %}
-{% load bootstrap4 %}
-{% block content %}
-<div id="wrapper" id="content">
-    <div class="register">
-        <div class="form-data">
-            <form action="{%url 'upload_image'%}" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                <h2 class="intro">Share an image</h2>
-                {% bootstrap_form form%}
-                <button class="form-btn" type="submit">Upload</button>
-            </form>
-            <div class="get-the-app">
-                <span>Get the app</span>
-                <div class="badges">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                </div>                
+{%extends 'base.html'%} {% load static %} {% load bootstrap4 %} {% block content %}
+<!-- IMAGE UPLOAD FORM -->
+<div class="container">
+    <div id="wrapper" id="content">
+        <div class="register">
+            <div class="form-data">
+                <form action="{%url 'upload_image'%}" method="post" enctype="multipart/form-data"> {% csrf_token %} <h2
+                        class="intro">Share an image</h2> {% bootstrap_form form%} <button class="form-btn btn-primary"
+                        type="submit" style="padding: 5px; border-radius: 10%;">Upload</button>
+                </form>
             </div>
         </div>
     </div>
-<footer class="mastfoot mt-auto">
-    <div class="inner">
-        <ul class="footer-flex">
-            <li class="text-muted">About</li>
-            <li class="text-muted">Blog</li>
-            <li class="text-muted">Jobs</li>
-            <li class="text-muted">Help</li>
-            <li class="text-muted">API</li>
-            <li class="text-muted">Privacy</li>
-            <li class="text-muted">Terms</li>
-            <li class="text-muted">TopAccounts</li>
-            <li class="text-muted">Hashtags</li>
-            <li class="text-muted">Locations</li>
-        </ul>
-        <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
-    </div>
-</footer>
-{% endblock %}
+    <!-- END IMAGE UPLOAD FORM  -->
+    <!-- FOOTER  -->
+    <footer class="mastfoot mt-auto">
+        <div class="inner">
+            <ul class="footer-flex">
+                <li class="text-muted">About</li>
+                <li class="text-muted">Blog</li>
+                <li class="text-muted">Jobs</li>
+                <li class="text-muted">Help</li>
+                <li class="text-muted">API</li>
+                <li class="text-muted">Privacy</li>
+                <li class="text-muted">Terms</li>
+                <li class="text-muted">TopAccounts</li>
+                <li class="text-muted">Hashtags</li>
+                <li class="text-muted">Locations</li>
+            </ul>
+            <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
+        </div>
+    </footer> {% endblock %}
