create send welcome email function and set up email configurations

--- a/clone/templates/navbar.html
+++ b/clone/templates/navbar.html
@@ -46,7 +46,7 @@
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
             alt="logo" width="103" class="logo"></a>
       </span>
-      <form class="mb-0 h1 ml-auto mr-auto" id="searchform" action="">
+      <form class="mb-0 h1 ml-auto mr-auto" id="searchform" action="{% url 'search' %}">
         <input name="search_user" autocomplete="off" id="searching" class="form-control d-none d-md-block"
           placeholder="Search">
         <i class="spinner "></i>
