--- a/clone/templates/registration/login.html
+++ b/clone/templates/registration/login.html
@@ -15,6 +15,8 @@
             </div>
             <input type="hidden" name="next" value="{% url 'create_profile' %}">
           </form>
+          <div class="sign-up"> Don't have an account? <a href="/accounts/register/" class="ml-2">Sign Up</a>
+          </div>
         </div>
       </div>
     </div>
