--- a/clone/templates/profile/profile.html
+++ b/clone/templates/profile/profile.html
@@ -102,6 +102,12 @@
                   class=" btn btn-info" name="unfollow" value="Unfollow"
                   style="color: #003569 !important; padding: 6px 9px;">
               </form> {% endif %} {% endif %}
+              {%if profile.user.username == request.user.username%}
+              {% else%}
+               {% if follow_status %} <a class="btn btn-sm btn-outline-danger ml-5"
+                 href="{% url 'unfollow' user_prof.profile.id %}">Unfollow</a> {%else%} <a
+                 class="btn btn-sm btn-primary ml-5" href="{% url 'follow' user_prof.profile.id %}">Follow</a>
+               {% endif %}
             </div>
           </div>
         </div>
