--- a/clone/templates/profile/profile.html
+++ b/clone/templates/profile/profile.html
@@ -102,22 +102,14 @@
                   class=" btn btn-info" name="unfollow" value="Unfollow"
                   style="color: #003569 !important; padding: 6px 9px;">
               </form> {% endif %} {% endif %}
-              {%if profile.user.username == request.user.username%}
-              {% else%}
-               {% if follow_status %} <a class="btn btn-sm btn-outline-danger ml-5"
-                 href="{% url 'unfollow' user_prof.profile.id %}">Unfollow</a> {%else%} <a
-                 class="btn btn-sm btn-primary ml-5" href="{% url 'follow' user_prof.profile.id %}">Follow</a>
-               {% endif %}
             </div>
           </div>
         </div>
         <hr>
-        <div class="row"> {% if images %} {% for image in images %} 
-          <div class="col-md-4 col-sm-4"
+        <div class="row"> {% if images %} {% for image in images %} <div class="col-md-4 col-sm-4"
             style="object-fit: cover;">
             <img src="{{image.image.url}}" alt="" style="width: 20rem; height: 20rem; object-fit: cover;" class="mt-5">
-          </div> {% endfor %} {% endif %} 
-        </div>
+          </div> {% endfor %} {% endif %} </div>
       </div> {% else %} <h5 style="font-size: 2rem;">No user with username "{{search}}"</h5> {% endif %} {% endif %}
     </div>
     <div class="col-xs-12 col-md-3"></div>
@@ -155,5 +147,4 @@
     </ul>
     <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
   </div>
-</footer> 
-{% endblock %}
+</footer> {% endblock %}
