--- a/clone/templates/django_registration/registration_form.html
+++ b/clone/templates/django_registration/registration_form.html
@@ -8,12 +8,11 @@
       {% if form.errors %}
         <p> Some Information Might be Incorrect </p>
       {% endif %}
-      <div class="panel panel-default">
-
-        <div class="panel-heading">
+      <div class="panel panel-default card">
+        <div class="panel-heading card-header">
           <h3 class="text-center">Sign Up</h3>
         </div>
-        <div class="panel-body">
+        <div class="panel-body card-body">
 
           <form  action="/accounts/register/" method="post">
             {% csrf_token %}
