--- a/clone/templates/registration/base.html
+++ b/clone/templates/registration/base.html
@@ -27,6 +27,7 @@
 
   {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/register.css'%}">
     {% bootstrap_javascript %}
   {% endblock %}
 
