--- a/clone/templates/create_profile.html
+++ b/clone/templates/create_profile.html
@@ -2,15 +2,15 @@
 <!-- CREATE PROFILE  -->
 <div class="container">
     <div id="wrapper" id="content">
-        <div class="register">
+        <div class="register card">
             <div class="form-data form-data-prof">
                 <form action="{%url 'create_profile'%}" method="post" enctype="multipart/form-data"> {% csrf_token %}
-                    <div class="logo text-center mb-5">
+                    <div class="logo text-center mb-5 card-header bg-white">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
                             alt="" style="width: 300px; height:auto;" class="">
                     </div>
                     <h2 class="intro">Create a profile to start using Instagram</h2> {% bootstrap_form form%} <button
-                        class="form-btn" type="submit">Create Profile</button>
+                        class="form-btn profile-btn" type="submit">Create Profile</button>
                 </form>
             </div>
         </div>
