--- a/clone/templates/django_registration/registration_form.html
+++ b/clone/templates/django_registration/registration_form.html
@@ -1,34 +1,23 @@
-{%extends "registration/base.html"%} {% load bootstrap4 %}
-{% block content %}
-<div class="container">
+{%extends "registration/base.html"%} {% load bootstrap4 %} {% block content %} <div class="container">
   <div class="row">
     <!-- Empty div -->
     <div class="col-md-4"></div>
-    <div class="col-md-4">
-      {% if form.errors %}
-        <p> Some Information Might be Incorrect </p>
-      {% endif %}
-      <div class="panel panel-default card">
-        <div class="panel-heading card-header">
-          <h3 class="text-center">Sign Up</h3>
+    <div class="col-md-4"> {% if form.errors %} <p> Some Information Might be Incorrect </p> {% endif %} <div
+        class="panel panel-default card ">
+        <div class="panel-heading card-header bg-white">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
+            alt="Instagram-logo" class="card-img">
         </div>
         <div class="panel-body card-body">
-
-          <form  action="/accounts/register/" method="post">
-            {% csrf_token %}
-            {% bootstrap_form form %}
-            <div class="form-group">
+          <form action="/accounts/register/" method="post"> {% csrf_token %} {% bootstrap_form form %} <div
+              class="form-group">
               <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
             </div>
-
             <input type="hidden" name="next" value="{% url 'create_profile' %}">
-
           </form>
-
         </div>
-
       </div>
-
     </div>
     <!-- empty div -->
     <div class="col-md-4"></div>
@@ -50,5 +39,4 @@
     </ul>
     <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
   </div>
-</footer>
-{% endblock %}
+</footer> {% endblock %}
