--- a/clone/templates/registration/login.html
+++ b/clone/templates/registration/login.html
@@ -15,7 +15,7 @@
                  class="form-group">
                 <input type="submit" class="btn btn-primary btn-sm" value="Login">
               </div>
-               <input type="hidden" name="next" value="{% url 'create_profile' %}">
+               <input type="hidden" name="next" value="{% url 'home' %}">
             </form>
           </div>
           <div class="sign-up sub-content"> Don't have an account? <div class="s-part">
