--- a/clone/templates/profile/profile.html
+++ b/clone/templates/profile/profile.html
@@ -1,78 +1,12 @@
 {%extends 'base.html'%} {% load bootstrap4 %} {% load static %} {% block content %}
-<!-- <div class="row" style="padding-top: 2rem;">
-  <div class="col-xs-12 col-md-3"></div>
-  <div class="col-xs-12 col-md-6"> {% if no_search %} <p class="text-center" style="font-size: 2rem;">{{no_search}}</p>
-    {% else %} {% if profile %} <div id="profile">
-      <div class="d-flex">
-        <div class="pro">
-          <img class="user-img"
-            style="width:12rem; height:12rem;object-fit: cover; margin-right: 3rem; border-radius: 50%; "
-            src="{{profile.profile_pic.url}}" alt="">
-        </div>
-        <div class="profile" style="padding-top: 3rem;">
-         {%if profile.user.username == request.user.username%}
-          {% else%} {% if follow_form %} <form action="/profile/{{profile.id}}" method="post" style="margin-top: 2rem;">
-            {%csrf_token%} {% bootstrap_form follow_form%} <input type="submit" class=" btn btn-primary" name="follow"
-              value="Follow" style="background-color: #003569 !important; padding: 6px 9px;">
-          </form> {% endif %} {% if unfollow_form %} <form action="/profile/{{profile.id}}" method="post"
-            style="margin-top: 2rem;"> {%csrf_token%} {% bootstrap_form unfollow_form%} <input type="submit"
-              class=" btn btn-info" name="unfollow" value="Unfollow"
-              style="color: #003569 !important; padding: 6px 9px;">
-          </form> {% endif %} {% endif %}
-        </div>
-      </div>
-      <div class="col-md-6 mt-3">
-        <div class="media-body">
-          <div class="account-heading"><span class="mr-3 text-secondary username">{{ profile.user.username }}</span>
-            <a class="btn btn-sm btn-outline-secondary mr-3" data-toggle="modal" href="create_profile/"><strong>Edit
-                Profile</strong></a>
-            <a class="mt-3" data-toggle="modal" data-target="#ModalCenter"><i class="fa fa-cog mt-3" id="cog"></i></a>
-            {%if profile.user.username == request.user.username%} {% else%} {% if follow_form %} <form action="/profile/{{profile.id}}" method="post" style="margin-top: 2rem;"> {%csrf_token%}
-            {% bootstrap_form follow_form%} <input type="submit" class=" btn btn-primary" name="follow" value="Follow" style="background-color: #003569 !important; padding: 6px 9px;">
-            </form> {% endif %} {% if unfollow_form %} <form action="/profile/{{profile.id}}" method="post"
-              style="margin-top: 2rem;"> {%csrf_token%} {% bootstrap_form unfollow_form%} <input type="submit"
-              class=" btn btn-info" name="unfollow" value="Unfollow"
-              style="color: #003569 !important; padding: 6px 9px;">
-            </form> {% endif %} {% endif %}
-          </div>
-          <div class="post-details mt-3 mb-3">
-            <span class="mr-5"><strong>{{posts}}</strong> Posts</span>
-            <span class="mr-5"> <strong>{{profile.followers}}</strong> followers</span>
-            <span class="mr-5"> <strong>{{profile.following}}</strong> following</span>
-          </div>
-          <p class="text-secondary">{{ profile.bio }}</p>
-        </div>
-      </div> -->
-<!-- <div class="d-flex" style="margin-top: 2rem;">
-        <div class='col-stats'>
-          <strong style="font-size: 1.4rem;">{{posts}}</strong>
-          <br />
-          <p style="font-size: 1.2rem;">posts</p>
-        </div>
-        <div class='col-stats'>
-          <strong style="font-size: 1.4rem;">{{profile.followers}}</strong>
-          <br />
-          <p style="font-size: 1.2rem;">followers</p>
-        </div>
-        <div class='col-stats'>
-          <strong style="font-size: 1.4rem;">{{profile.following}}</strong>
-          <br />
-          <p style="font-size: 1.2rem;">following</p>
-        </div>
-      </div> -->
-<!-- <div class="row"> {% if images %} {% for image in images %} <div class="col-md-4 col-sm-4"
-          style="object-fit: cover;">
-          <img src="{{image.image.url}}" alt="" style="width: 20rem; height: 20rem; object-fit: cover;">
-        </div> {% endfor %} {% endif %} </div>
-    </div> {% else %} <h5 style="font-size: 2rem;">No user with username "{{search}}"</h5> {% endif %} {% endif %}
-  </div>
-  <div class="col-xs-12 col-md-3"></div>
-</div> -->
+
 <div class="container" style="margin-top:8%">
   <div class="content-section">
     <div class="media">
-      <div class="container"> {% if no_search %} <p class="text-center" style="font-size: 2rem;">{{no_search}}</p>
-        {% else %} {% if profile %} <div class="row">
+      <div class="container">  
+        <div class="row">
+          {% if no_search %} <p class="text-center" style="font-size: 2rem;">{{no_search}}</p> {% else %}
+          {% if profile %}
           <div class="col-md-1"></div>
           <div class="col-md-3">
             <img class="rounded-circle account-img" src="{{profile.profile_pic.url}}"
