--- a/clone/templates/navbar.html
+++ b/clone/templates/navbar.html
@@ -4,7 +4,7 @@
       <span class="navbar-brand mb-0 h1">
         <a href="{% url 'home' %}"><img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
-            alt="logo" width="103" class="logo"></a>
+            alt="logo" style="width: 103px;" class="logo"></a>
       </span>
       <form class="mb-0 h1 ml-auto mr-auto" id="searchform" action="{% url 'search'%}">
         <input name="search_user" autocomplete="off" id="searching" class="form-control d-none d-md-block"
@@ -13,10 +13,10 @@
       </form>
       <span class="pull-right">
         <div class="nav-icons">
-          <a href="/"><i class="fas fa-home navbar-icons"></i></a>
-          <a href="/upload/image"><i class="fas fa-share-alt  navbar-icons"></i></i></a>
+          <a href="/"><i class="bi bi-house navbar-icons"></i></a>
+          <a href="/upload/image"><i class="bi bi-share navbar-icons"></i></i></a>
           <a href="#" data-toggle="modal" data-target="#myModal">
-            <i class="fas fa-user  navbar-icons"></i>
+            <i class="bi bi-person  navbar-icons"></i>
           </a>
         </div>
       </span>
@@ -34,8 +34,11 @@
         <div class="modal-body text-left ">
           <ul class="modal-text">
             <li><a href="/profile/{{request.user.id}}" class="text-modal">Profile</a></li>
+            <hr>
             <li><a href="/upload/image" class="text-modal">Upload Image</a></li>
+            <hr>
             <li><a href="/logout" class="text-modal">Logout</a></li>
+            <hr>
           </ul>
         </div>
       </div>
