--- a/clone/templates/registration/login.html
+++ b/clone/templates/registration/login.html
@@ -6,9 +6,8 @@
       <div >
         <div class="panel panel-default main-content">
           <div class="panel-heading header">
-            <img
-               src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
-               alt="Instagram-logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
+               alt="Instagram-logo" class="text-center">
           </div>
           <div class="panel-body">
             <form action="/accounts/login/" method="post"> {% csrf_token %} {% bootstrap_form form%} <div
