--- a/clone/templates/search.html
+++ b/clone/templates/search.html
@@ -1,10 +1,54 @@
-{% extends 'base.html' %} {% load bootstrap4 %} {% load static %} {% block content %} {% if searched_user %}
-{% for user in searched_user %} <div class="row profile-settings">
-  <div class="col-xs-12">
-    <div class="profile-pic-name">
-      <img class="picture-circle--medium" src="{{user.profile_pic.url}}">
-      <span class="username">Username:<a href="/profile/{{image.profile.id}}"> {{user.profile.name}}</a> </span>
-      <span class="username">Bio:{{ user.profile.bio }}</span>
-    </div>
-  </div>
-</div> {% endfor %} {% endif %} {% endblock %}
+{% extends 'base.html' %} {% load bootstrap4 %} {% load static %} {% block content %} <div class="row profile-settings">
+  <!-- SEARCH FUNCTION  -->
+  <div class="container" style="margin-top:8%">
+    <div class="content-section">
+      <div class="media">
+        <div class="container"> {% if searched_user %} {% for user in searched_user %} <div class="search-flex"
+            style="display: flex; align-items: center; justify-content: center;">
+            <div class="col-md-3">
+              <img class="rounded-circle account-img" src="{{user.profile.profile_pic.url}}"
+                style="width:12rem; height:12rem;object-fit: cover; margin-right: 3rem; border-radius: 50%;">
+            </div>
+            <div class="col-md-6 mt-3">
+              <div class="media-body">
+                <div class="account-heading"><a href="profile/{{user.profile.id}}"><span
+                      class="mr-3 text-secondary username">{{ user.username }}</span></a>
+                </div>
+                <div class="post-details mt-3 mb-3">
+                  <span class="mr-5"><strong>{{profile.images.count}}</strong> Posts</span>
+                  <span class="mr-5"> <strong>{{user.profile.followers}}</strong> followers</span>
+                  <span class="mr-5"> <strong>{{user.profile.following}}</strong> following</span>
+                </div>
+                <p class="text-secondary">{{ user.profile.bio }}</p>
+                <a href="profile/{{user.profile.id}}">
+                  <button class="search-btn btn-primary" style="padding: 5px 9px; border-radius:5px;"> See Profile
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-3"></div>
+        </div>
+      </div> 
+      {% endfor %} {% endif %} 
+      <!-- END OF SEARCH FUNCTION  -->
+      <!-- FOOTER  -->
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <ul class="footer-flex">
+            <li class="text-muted">About</li>
+            <li class="text-muted">Blog</li>
+            <li class="text-muted">Jobs</li>
+            <li class="text-muted">Help</li>
+            <li class="text-muted">API</li>
+            <li class="text-muted">Privacy</li>
+            <li class="text-muted">Terms</li>
+            <li class="text-muted">TopAccounts</li>
+            <li class="text-muted">Hashtags</li>
+            <li class="text-muted">Locations</li>
+          </ul>
+          <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
+        </div>
+      </footer>
+      <!-- END OF FOOTER  -->
+      {% endblock %}
