--- a/static/css/register.css
+++ b/static/css/register.css
@@ -46,8 +46,8 @@ body {
   height: 50px;
   width: 175px;
   margin: auto;
-  position: relative;
-  left: 40px;
+  /* position: re; */
+  /* left: 40px; */
 }
 
 .s-part {
@@ -80,3 +80,11 @@ body {
 }
 
 /* CREATE PROFILE  */
+
+.search-btn {
+  padding: 5px 9px;
+  color: white;
+  color: #3897f0;
+  ;
+
+}
