add view single post function

--- a/clone/templates/home.html
+++ b/clone/templates/home.html
@@ -24,7 +24,9 @@
               </div>
               <div class="card-body p-0 bg-none">
                 <div class="embed-responsive embed-responsive-1by1 x">
-                  <img class="embed-responsive-item " src="{{image.image.url}}"/>
+                  <a href="/image/{{image.id}}">
+                    <img class="embed-responsive-item " src="{{image.image.url}}" />
+                   </a>
                 </div>
                 <div class="d-flex flex-row justify-content-between pl-3 pr-3 pt-3 pb-1">
                   <ul class="list-inline d-flex flex-row align-items-center m-0">
