--- a/clone/templates/profile/profile.html
+++ b/clone/templates/profile/profile.html
@@ -1,20 +1,17 @@
-{%extends 'base.html'%} {% load bootstrap4 %} {% load static %} {% block content %}
-
-<div class="container" style="margin-top:8%">
+{%extends 'base.html'%} {% load bootstrap4 %} {% load static %} {% block content %} <div class="container"
+  style="margin-top:8%">
   <div class="content-section">
     <div class="media">
-      <div class="container">  
-        <div class="row">
-          {% if no_search %} <p class="text-center" style="font-size: 2rem;">{{no_search}}</p> {% else %}
-          {% if profile %}
-          <div class="col-md-1"></div>
+      <div class="container">
+        <div class="row"> {% if no_search %} <p class="text-center" style="font-size: 2rem;">{{no_search}}</p>
+          {% else %} {% if profile %} <div class="col-md-1"></div>
           <div class="col-md-3">
             <img class="rounded-circle account-img" src="{{profile.profile_pic.url}}"
               style="width:12rem; height:12rem;object-fit: cover; margin-right: 3rem; border-radius: 50%;">
           </div>
           <div class="col-md-6 mt-3">
             <div class="media-body">
-              <div class="account-heading"><span class="mr-3 text-secondary username">{{ user.username }}</span>
+              <div class="account-heading"><span class="mr-3 text-secondary username">{{ profile.user.username }}</span>
                 <a class="btn btn-sm btn-outline-secondary mr-3" data-toggle="modal"
                   data-target=".bd-example-modal-md"><strong>Edit Profile</strong></a>
                 <a class="mt-3" data-toggle="modal" data-target="#ModalCenter"><i class="fa fa-cog mt-3"
